--- a/templates/visualization.html
+++ b/templates/visualization.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>d3 map</title>
+<title>Visualization</title>
 	<script src="https://d3js.org/d3.v5.min.js"></script>
 	<script src="https://d3js.org/d3-selection.v1.min.js"></script>
 	<script src="https://d3js.org/d3-array.v1.min.js"></script>
@@ -10,11 +10,14 @@
 	<script src="https://d3js.org/d3-dsv.v1.min.js"></script>
 	<script src="https://d3js.org/d3-fetch.v1.min.js"></script>
 	<script src="https://unpkg.com/topojson@3"></script>
-	<link rel="stylesheet" href="styles.css">
+	<link rel="stylesheet" href="{{url_for('static', filename='styles.css')}}">
 </head>
 
 <body>
-	<script src="draw.js"></script>
+	<h1>Visualization</h1>
+	<a href="{{url_for('home')}}">back</a>
+	<div class="graphic"></div>
+	<script src="{{url_for('static', filename='draw.js')}}"></script>
 </body>
 
 </html> 
