--- a/templates/visualization.html
+++ b/templates/visualization.html
@@ -17,7 +17,7 @@
 <body>
 	<h1>Visualization</h1>
 	<a href="{{url_for('home')}}">back</a>
-	<div class="graphic"></div>
+	<div id="map"></div>
 	<script src="{{url_for('static', filename='draw.js')}}"></script>
 </body>
 
