--- a/static/styles.css
+++ b/static/styles.css
@@ -15,3 +15,16 @@
 	stroke: red;
 	fill: None;
 }
+
+div.tooltip {	
+	position: absolute;
+	text-align: center;
+	width: 60px;
+	height: 28px;
+	padding: 2px;
+	font: 12px sans-serif;
+	background: lightsteelblue;
+	border: 0px;
+	border-radius: 8px;
+	pointer-events: none;
+}
