--- a/templates/visualization.html
+++ b/templates/visualization.html
@@ -9,6 +9,7 @@
 	<script src="https://d3js.org/d3-geo.v1.min.js"></script>
 	<script src="https://d3js.org/d3-dsv.v1.min.js"></script>
 	<script src="https://d3js.org/d3-fetch.v1.min.js"></script>
+	<script src="https://d3js.org/d3-transition.v1.min.js"></script>
 	<script src="https://unpkg.com/topojson@3"></script>
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 	<link rel="stylesheet" href="{{url_for('static', filename='styles.css')}}">
