--- a/templates/visualization.html
+++ b/templates/visualization.html
@@ -11,6 +11,8 @@
 	<script src="https://d3js.org/d3-fetch.v1.min.js"></script>
 	<script src="https://unpkg.com/topojson@3"></script>
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+  <script src="https://d3js.org/d3-transition.v1.min.js"></script>
+  <script src="https://d3js.org/d3-scale.v3.min.js"></script>
 	<link rel="stylesheet" href="{{url_for('static', filename='styles.css')}}">
   <link rel="stylesheet" href="{{url_for('static', filename='bar.css')}}">
 
@@ -23,7 +25,7 @@
 	<script src="{{url_for('static', filename='draw.js')}}"></script>
   <div id = "mydiv"></div>
   <script src="{{url_for('static', filename='bar_group.js')}}"></script>
-
+  
 </body>
 
 </html>
