--- a/templates/visualization.html
+++ b/templates/visualization.html
@@ -30,7 +30,17 @@
 	<a href="{{url_for('home')}}">back</a>
 	<div id="map"></div>
 	<script src="{{url_for('static', filename='draw.js')}}"></script>
-  <div id = "mydiv"></div>
+  <div id = "mydiv">
+    <div>
+      <label for="bchart">Select barchart</label>
+      <select name="bchart" id="barchart">
+        <option>CARRIER</option>
+        <option>AIRPORT</option>
+        <option selected="selected">CITY</option>
+      </select>
+      <button id="button">plot</button>
+    </div>
+  </div>
   <script src="{{url_for('static', filename='bar_group.js')}}"></script>
   <div id = "sunburst"></div>
   <script src="{{url_for('static', filename='sunburst.js')}}"></script>
