rename duplicate function

--- a/templates/visualization.html
+++ b/templates/visualization.html
@@ -10,14 +10,13 @@
 	<script src="https://d3js.org/d3-dsv.v1.min.js"></script>
 	<script src="https://d3js.org/d3-fetch.v1.min.js"></script>
 	<script src="https://d3js.org/d3-transition.v1.min.js"></script>
-	<script src="https://unpkg.com/topojson@3"></script>
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
   <script src="https://d3js.org/d3-transition.v1.min.js"></script>
   <script src="https://d3js.org/d3-scale.v3.min.js"></script>
   <script src= "{{url_for('static', filename='underscore.js')}}"></script>
   <script src= "{{url_for('static', filename='underscore.nest.js')}}"></script>
   <script src="https://d3js.org/d3-hierarchy.v1.min.js"></script>
-  <script src="https://unpkg.com/sunburst-chart"></script>
+  <script src="https://unpkg.com/sunburst-chart@1.7.0/dist/sunburst-chart.min.js"></script>
 	<script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 
 	<link rel="stylesheet" href="{{url_for('static', filename='styles.css')}}">
