--- a/templates/visualization.html
+++ b/templates/visualization.html
@@ -27,8 +27,10 @@
 <body>
 	<h1>Visualization</h1>
 	<a href="{{url_for('home')}}">back</a>
-	<div id="map"></div>
-	<div id="carrier-bar">
+  <div class="max-width">
+      <div id="map"></div>
+      <div id="carrier-bar"></div>
+  </div>
 	<script src="{{url_for('static', filename='draw.js')}}"></script>
   <div id = "mydiv">
     <div>
