--- a/templates/visualization.html
+++ b/templates/visualization.html
@@ -31,11 +31,14 @@
 	<a href="{{url_for('home')}}">back</a>
   <div class="max-width">
   	<div id="map-graph">
-  		<div class="max-width">
+  		<div class="max-width" style="text-align: center;">
   			<label for="airportSelection">Select airport:</label>
   			<select id="airportSelection">
   				<option value="">Select</option>
   			</select>
+  		</div>
+  		<div class="max-width" style="text-align: right;">
+  			<svg id="map-legend"></svg>
   		</div>
   		<div id="map" class="max-width"></div>
   	</div>
