--- a/templates/visualization.html
+++ b/templates/visualization.html
@@ -32,13 +32,18 @@
   <div class="max-width">
   	<div id="map-graph">
   		<div class="max-width" style="text-align: center;">
-  			<label for="airportSelection">Select airport:</label>
-  			<select id="airportSelection">
-  				<option value="">Select</option>
-  			</select>
+  			<label class="map-title">Delayed Flights in US</label>
   		</div>
-  		<div class="max-width" style="text-align: right;">
-  			<svg id="map-legend"></svg>
+  		<div class="max-width" style="text-align: right; margin-top: 10px">
+  			<div id="airport-selection-wrapper">
+  				<label for="airportSelection">Select airport:</label>
+	  			<select id="airportSelection">
+	  				<option value="">Select</option>
+	  			</select>
+  			</div>
+  			<div style="float: right;">
+  				<svg id="map-legend"></svg>
+  			</div>
   		</div>
   		<div id="map" class="max-width"></div>
   	</div>
