--- a/static/styles.css
+++ b/static/styles.css
@@ -7,12 +7,17 @@
 	float: left;
     text-align: center;
     vertical-align: middle;
-    margin-top: 12px;
+    margin-top: 15px;
     margin-left: 100px;
 }
 
+#map-legend-wrapper {
+	float: right;
+	margin-top: 10px;
+}
+
 #map-legend {
-	width: 225px;
+	width: 300px;
 	height: 48px;
 }
 
