restyle for airport selectio

--- a/templates/visualization.html
+++ b/templates/visualization.html
@@ -39,13 +39,13 @@
 
   <div class="max-width">
   	<div id="map-graph">
-  		<div class="max-width" style="text-align: center;">
+  		<div id="airport-selection-wrapper">
   			<label for="airportSelection">Select airport:</label>
   			<select id="airportSelection">
   				<option value="">Select</option>
   			</select>
   		</div>
-  		<div class="max-width" style="text-align: right;">
+  		<div id="map-legend-wrapper">
   			<svg id="map-legend"></svg>
   		</div>
   		<div id="map" class="max-width"></div>
