add title for map

--- a/templates/visualization.html
+++ b/templates/visualization.html
@@ -39,6 +39,9 @@
 
   <div class="max-width">
   	<div id="map-graph">
+  		<div class="max-width">
+  			<label class="map-title">Delayed Flights In US</label>
+  		</div>
   		<div id="airport-selection-wrapper">
   			<label for="airportSelection">Select airport:</label>
   			<select id="airportSelection">
