--- a/templates/visualization.html
+++ b/templates/visualization.html
@@ -56,6 +56,10 @@
   	<div id="carrier-bar"></div>
   </div>
 	<script src="{{url_for('static', filename='draw.js')}}"></script>
+	<div class="max-width">
+		<div id="flight-timeseries"></div>
+	</div>
+	<script src="{{url_for('static', filename='flight-timeseries.js')}}"></script>
   <br>
   <br>
   <p>Predict for flight</p>
