add carrier parallel cordinate

--- a/templates/visualization.html
+++ b/templates/visualization.html
@@ -60,6 +60,10 @@
 		<div id="flight-timeseries"></div>
 	</div>
 	<script src="{{url_for('static', filename='flight-timeseries.js')}}"></script>
+  <div class="max-width">
+    <div id="parallel-carrier"></div>
+  </div>
+  <script src="{{url_for('static', filename='parallel-carrier.js')}}"></script>
   <br>
   <br>
   <p>Predict for flight</p>
