update page link and restyle for map route

--- a/templates/visualization.html
+++ b/templates/visualization.html
@@ -33,7 +33,7 @@
 <body>
 
 	<h1>Visualization</h1>
-  <a href="{{url_for('home')}}">back</a>
+  	<a href="{{url_for('import_data')}}">Import data</a>
 
   <div class="max-width">
   	<div id="map-graph">
