--- a/templates/visualization.html
+++ b/templates/visualization.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Visualization</title>
+<title>ANALYSIS OF US AIRLINE PERFORMANCE</title>
 	<script src="https://d3js.org/d3.v5.min.js"></script>
 	<script src="https://d3js.org/d3-selection.v1.min.js"></script>
 	<script src="https://d3js.org/d3-array.v1.min.js"></script>
@@ -32,7 +32,7 @@
 
 <body>
 
-	<h1>Visualization</h1>
+	<h1>ANALYSIS OF US AIRLINE PERFORMANCE</h1>
   	<a href="{{url_for('import_data')}}">Import data</a>
 
   <div class="max-width">
