--- a/templates/visualization.html
+++ b/templates/visualization.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>ANALYSIS OF US AIRLINE PERFORMANCE</title>
+<title>Visualization</title>
 	<script src="https://d3js.org/d3.v5.min.js"></script>
 	<script src="https://d3js.org/d3-selection.v1.min.js"></script>
 	<script src="https://d3js.org/d3-array.v1.min.js"></script>
@@ -20,20 +20,53 @@
   <script src="//unpkg.com/sunburst-chart"></script>
 	<script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.8/js/select2.min.js"></script>
-	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-
   <link rel="stylesheet" href="{{url_for('static', filename='autocomplete.css')}}">
 	<link rel="stylesheet" href="{{url_for('static', filename='styles.css')}}">
   <link rel="stylesheet" href="{{url_for('static', filename='bar.css')}}">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.8/css/select2.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
   <link rel="stylesheet" href="/resources/demos/style.css">
+  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+
+
+  <!-- calendar-heatmap -->
+  <link rel="stylesheet" href="{{url_for('static', filename='bootstrap.css')}}"/>
+  <script src= "{{url_for('static', filename='bootstrap.min.js')}}"></script>
+  <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='calendar-heatmap.min.css')}}">
+  <script src= "{{url_for('static', filename='calendar-heatmap.min.js')}}"></script>
+
+  <style>
+  .calender-map {
+      font: 10px sans-serif;
+      shape-rendering: crispEdges;
+    }
+    .day {
+      stroke: #666;
+    }
+    .month {
+      fill: none;
+      stroke: #000;
+      stroke-width: 2px;
+    }
+    .RdYlGn .q0-11{fill:rgb(165,0,38)}
+    .RdYlGn .q1-{fill:rgb(215,48,39)}
+    .RdYlGn .q2-11{fill:rgb(244,109,67)}
+    .RdYlGn .q3-11{fill:rgb(253,174,97)}
+    .RdYlGn .q4-11{fill:rgb(254,224,139)}
+    .RdYlGn .q5-11{fill:rgb(255,255,191)}
+    .RdYlGn .q6-11{fill:rgb(217,239,139)}
+    .RdYlGn .q7-11{fill:rgb(166,217,106)}
+    .RdYlGn .q8-11{fill:rgb(102,189,99)}
+    .RdYlGn .q9-11{fill:rgb(26,152,80)}
+    .RdYlGn .q10-11{fill:rgb(0,104,55)}
+    </style>
 </head>
 
 <body>
 
-	<h1>ANALYSIS OF US AIRLINE PERFORMANCE</h1>
-  	<a href="{{url_for('import_data')}}">Import data</a>
+	<h1>Visualization</h1>
+  <a href="{{url_for('home')}}">back</a>
+
 
   <div class="max-width">
   	<div id="map-graph">
@@ -56,21 +89,8 @@
 	<script src="{{url_for('static', filename='draw.js')}}"></script>
 	<div class="max-width">
 		<div id="flight-timeseries"></div>
-		<div id="flight-timeseries-description" class="paragraph">
-			<p>The total flights during the time has a weekly cycle. It can be seen clearly when zoom in. The number of flights is <b>low on Sunday, peaks on Tuesday, Friday, Saturday</b>.</p>
-			<p>The number delayed flights tends to have the same behavior.</p>
-		</div>
 	</div>
 	<script src="{{url_for('static', filename='flight-timeseries.js')}}"></script>
-  <div class="max-width">
-    <div id="parallel-carrier"></div>
-    <div id="parallel-carrier-description" class="paragraph">
-		<p><b>Southwest Airlines(WN)</b> has the <b>highest flights</b>, but <b>less delay</b>. <b>Delta Airlines(DL)</b> also has a <b>high flights</b>, but <b>lowest delay</b>.</p>
-		<p>American Airlines(AA), SkyWest Airlines(OO), United Airlines(UA) have less flights, but are as delayed as Southwest Airlines.</p>
-		<p>The rest have low flights, but high delay, which should be avoided when booking.</p>
-	</div>
-  </div>
-  <script src="{{url_for('static', filename='parallel-carrier.js')}}"></script>
   <br>
   <br>
   <p>Predict for flight</p>
@@ -101,13 +121,16 @@
   <br>
   <br>
   <br>
-  
+
   <div id = "sunburst">
     <h1>Sunburst chart for total delay flight</h1>
   </div>
   <script src="{{url_for('static', filename='sunburst.js')}}"></script>
 
-
+  <div class = 'calender-map '>
+    <h1>Heatmap calendar for percentag of delays on each day</h1>
+  </div>
+  <script src="{{url_for('static', filename='calendarmap.js')}}"></script>
 </body>
 
 </html>
