--- a/templates/visualization.html
+++ b/templates/visualization.html
@@ -63,7 +63,7 @@
 <body>
 
 	<h1>Visualization</h1>
-  <a href="{{url_for('home')}}">back</a>
+  <a href="{{url_for('import_data')}}">Import data</a>
 
 
   <h1 style="text-align: center;">Spatial Effect</h1>
