--- a/templates/visualization.html
+++ b/templates/visualization.html
@@ -29,13 +29,43 @@
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 
 
+  <!-- calendar-heatmap -->
+  <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='heatmap.css')}}">
+  <script src= "{{url_for('static', filename='bootstrap.min.js')}}"></script>
+  <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='calendar-heatmap.min.css')}}">
+  <script src= "{{url_for('static', filename='calendar-heatmap.min.js')}}"></script>
+
+  <style>
+  .calender-map {
+      font: 10px sans-serif;
+      shape-rendering: crispEdges;
+    }
+    .day {
+      stroke: #666;
+    }
+    .month {
+      fill: none;
+      stroke: #000;
+      stroke-width: 2px;
+    }
+    .RdYlGn .q0-11{fill:rgb(165,0,38)}
+    .RdYlGn .q1-{fill:rgb(215,48,39)}
+    .RdYlGn .q2-11{fill:rgb(244,109,67)}
+    .RdYlGn .q3-11{fill:rgb(253,174,97)}
+    .RdYlGn .q4-11{fill:rgb(254,224,139)}
+    .RdYlGn .q5-11{fill:rgb(255,255,191)}
+    .RdYlGn .q6-11{fill:rgb(217,239,139)}
+    .RdYlGn .q7-11{fill:rgb(166,217,106)}
+    .RdYlGn .q8-11{fill:rgb(102,189,99)}
+    .RdYlGn .q9-11{fill:rgb(26,152,80)}
+    .RdYlGn .q10-11{fill:rgb(0,104,55)}
+    </style>
 </head>
 
 <body>
 
 	<h1>Visualization</h1>
-  <a href="{{url_for('home')}}">back</a>
-
+  <a href="{{url_for('import_data')}}">Import data</a>
 
   <div class="max-width">
   	<div id="map-graph">
@@ -60,10 +90,6 @@
 		<div id="flight-timeseries"></div>
 	</div>
 	<script src="{{url_for('static', filename='flight-timeseries.js')}}"></script>
-  <div class="max-width">
-    <div id="parallel-carrier"></div>
-  </div>
-  <script src="{{url_for('static', filename='parallel-carrier.js')}}"></script>
   <br>
   <br>
   <p>Predict for flight</p>
@@ -94,13 +120,16 @@
   <br>
   <br>
   <br>
-  
+
   <div id = "sunburst">
     <h1>Sunburst chart for total delay flight</h1>
   </div>
   <script src="{{url_for('static', filename='sunburst.js')}}"></script>
 
-
+  <div class = 'calender-map '>
+    <h1>Heatmap calendar for percentag of delays on each day</h1>
+  </div>
+  <script src="{{url_for('static', filename='calendarmap.js')}}"></script>
 </body>
 
 </html>
