--- a/templates/visualization.html
+++ b/templates/visualization.html
@@ -101,6 +101,15 @@
     </div>
 	</div>
 	<script src="{{url_for('static', filename='flight-timeseries.js')}}"></script>
+  <div class = 'calender-map '>
+    <h1>Heatmap calendar for percentage of delays on each day</h1>
+  </div>
+  <script src="{{url_for('static', filename='calendarmap.js')}}"></script>
+  <div id="calender-map" class="paragraph">
+    <br>
+    <p>It is clear that most delays took place in <b>Winter season</b> (highest in February). Many  resources  has  reported  that  this  incident  was  due  to  heavy  winter  storm.</p>
+    <p>Weather condition aside, it is <b>ideal</b> to fly on <b>Wednesday or Sunday</b> and <b>avoid</b> seasons having <b>extreme weather</b>. </p>
+  </div>
   <hr>
 
   <h1 style="text-align: center;">Carrier Effect</h1>
@@ -204,10 +213,6 @@
   </div>
   <script src="{{url_for('static', filename='sunburst.js')}}"></script>
 
-  <div class = 'calender-map '>
-    <h1>Heatmap calendar for percentag of delays on each day</h1>
-  </div>
-  <script src="{{url_for('static', filename='calendarmap.js')}}"></script>
 
   <h2>Prediction</h2>
 
